[project]
name = "langgraph-pokemon-basic-agent"
version = "0.1.0"
description = "Learning project to practice the bases of langgraph with a pokemon \"agent\""
authors = [
    {name = "Angelo Mosquera",email = "anggelomos@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
pytest = "^8.4.0"

