[project]
name = "langgraph-pokemon-basic-agent"
version = "0.1.0"
description = "Learning project to practice the bases of langgraph with a pokemon \"agent\""
authors = [
    {name = "Angelo Mosquera",email = "anggelomos@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph (>=0.4.8,<0.5.0)",
    "attrs (>=25.3.0,<26.0.0)",
    "langchain-openai (>=0.3.22,<0.4.0)",
    "pokebase (>=1.4.1,<2.0.0)"
]

[project.scripts]
pokemon-agent = "run:main"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
pytest = "^8.4.0"
assertpy = "^1.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = [".", "src"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--color=yes"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests", 
    "system: marks tests as system tests"
]

# Logging configuration for tests
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s %(name)s: %(lineno)d)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# File logging during tests
log_file = "tests/pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s %(name)s: %(lineno)d)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

